# TradingBot

./: .env.example  .gitignore  AGENTS.md  AGENT_GUIDE.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.pyre/: pyre.stderr
bot/: adjustments.py  alerts.py  alt_data.py  analysis.py  analytics.py  auth.py  backtester.py  config.py  correlation_monitor.py  dashboard.py  data_fetcher.py  data_store.py  dividend_calendar.py  earnings_calendar.py  econ_calendar.py  execution_algos.py  file_security.py  google_model_aliases.py  hedger.py  iv_history.py  live_setup.py  live_trade_ledger.py  llm_advisor.py  llm_strategist.py  main.py  market_scanner.py  ml_scorer.py  monte_carlo.py  multi_agent_cio.py  news_scanner.py  number_utils.py  openai_compat.py  options_flow.py  orchestrator.py  paper_trader.py  pnl_attribution.py  pricing.py  regime_detector.py  risk_manager.py  rl_prompt_optimizer.py  (+7 more)
deploy/: DEPLOY.md  push-update.sh  setup-server.sh  tradingbot.service
scripts/: codex_team.py
tests/: test_adjustments.py  test_adversarial_review.py  test_alerts.py  test_alt_data.py  test_analysis.py  test_analytics.py  test_audit_log.py  test_backtester.py  test_broken_wing_butterfly.py  test_calendar_spreads.py  test_codex_team.py  test_config.py  test_correlation_monitor.py  test_dashboard.py  test_data_fetcher.py  test_earnings_dividend_calendar.py  test_earnings_vol_crush.py  test_econ_calendar.py  test_execution_algos.py  test_file_security.py  test_google_model_aliases.py  test_greeks_budget.py  test_hedger.py  test_iv_history.py  test_live_setup.py  (+35 more)
(+20 files in other folders)
