[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "1.0.0"
description = "LLM-powered automated options trading bot"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "schwab-py>=1.5.1",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "pyyaml>=6.0.1",
    "defusedxml>=0.7.1",
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "rich>=13.0.0",
]

[project.scripts]
tradingbot = "bot.main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["bot*"]
